# gtk-mediaplayer

./: README.md  main.c  mediaplayer-app.c  mediaplayer-app.h  mediaplayer-window.c  mediaplayer-window.h  mediaplayer.gresource.xml  meson.build  window.ui
